<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/clouds"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_changermdp"
    tools:context="com.swissport.www.swissport.ChangePassActivity">

    <LinearLayout
        android:id="@+id/ProfileContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/mdp_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />
        <ImageView

            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="4dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:orientation="vertical"

            android:src="@drawable/user1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/gris"
            android:id="@+id/textViewFullName"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:id="@+id/textViewMatricule"
            android:layout_gravity="center" />



        <EditText
            android:id="@+id/editTextpassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password1"
            android:imeActionLabel="@string/action_sign_in_short"
            android:inputType="textPassword" />



        <EditText
            android:id="@+id/editTextpassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password2"
            android:imeActionLabel="@string/action_sign_in_short"
            android:inputType="textPassword" />



        <EditText
            android:id="@+id/editTextpassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password3"
            android:imeActionLabel="@string/action_sign_in_short"
            android:inputType="textPassword" />




        <Button
            android:id="@+id/buttonChangePassword"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/red"
            android:textColor="@color/white"
            android:text="@string/action_sauvegarderMDP"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>