<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_profile"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/clouds"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.swissport.www.swissport.ProfileActivity"
    tools:showIn="@layout/activity_profile"
    >

    <LinearLayout
        android:id="@+id/ProfileContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <ImageView

            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="4dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:orientation="vertical"

            android:src="@drawable/user1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/gris"
            android:id="@+id/textViewFullName"
            android:layout_gravity="center"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:id="@+id/textViewMatricule"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_gravity="left" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gris"
            android:id="@+id/textViewEmail"
            android:layout_gravity="center" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/gris_clair" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_naissance"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_gravity="left" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDateDeNaissance"
            android:textColor="@color/gris"
            android:layout_gravity="center_horizontal" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/gris_clair" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sexe"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_gravity="left" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNbHeures"
            android:textColor="@color/gris"
            android:layout_gravity="center_horizontal" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/gris_clair" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fonction"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_gravity="left" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNbHeuresMois"
            android:textColor="@color/gris"
            android:layout_gravity="center_horizontal" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/gris_clair" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_gravity="left" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNbAbsences"
            android:textColor="@color/gris"
            android:layout_gravity="center_horizontal" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/gris_clair" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNbOff"
            android:layout_gravity="center_horizontal" />


        <Button
            android:id="@+id/buttonChangePassword"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/red"
            android:textColor="@color/white"
            android:text="@string/action_changerMDP"


            android:textStyle="bold" />



    </LinearLayout>


</LinearLayout>